# zango

./: .gitignore  CMakeLists.txt  README.md
projects/application/: main.cpp
projects/input_models/: northwind.dia
projects/northwind/: CMakeLists.txt
projects/northwind/include/zango/northwind/io/: all_io.hpp  suppliers_io.hpp
projects/northwind/include/zango/northwind/odb/: all_pragmas.hpp  categories-odb-oracle.hxx  categories-odb-oracle.ixx  categories-odb-pgsql.hxx  categories-odb-pgsql.ixx  categories-odb.hxx  categories-odb.ixx  categories_pragmas.hpp  category_id-odb-oracle.hxx  category_id-odb-oracle.ixx  category_id-odb-pgsql.hxx  category_id-odb-pgsql.ixx  category_id-odb.hxx  category_id_pragmas.hpp  customer_customer_demo-odb-oracle.hxx  customer_id-odb-oracle.hxx  (+164 more)
projects/northwind/src/: options.odb
projects/northwind/src/io/: customer_customer_demo_key_io.cpp  customers_io.cpp  employees_io.cpp  order_details_key_io.cpp  suppliers_io.cpp
projects/northwind/src/odb/: categories-odb-oracle.cpp  categories-odb-pgsql.cpp  category_id-odb-oracle.cpp  category_id-odb-pgsql.cpp  customer_customer_demo-odb-oracle.cpp  customer_customer_demo-odb-pgsql.cpp  customer_customer_demo_key-odb-oracle.cpp  customer_customer_demo_key-odb-pgsql.cpp  customer_demographics-odb-oracle.cpp  customer_demographics-odb-pgsql.cpp  customer_id-odb-oracle.cpp  customer_id-odb-pgsql.cpp  customer_type_id-odb-oracle.cpp  customer_type_id-odb-pgsql.cpp  customers-odb-oracle.cpp  customers-odb-pgsql.cpp  employee_id-odb-oracle.cpp  employee_id-odb-pgsql.cpp  employee_territories-odb-oracle.cpp  employee_territories-odb-pgsql.cpp  employee_territories_key-odb-oracle.cpp  employee_territories_key-odb-pgsql.cpp  employees-odb-oracle.cpp  employees-odb-pgsql.cpp  order_details-odb-oracle.cpp  order_details-odb-pgsql.cpp  order_details_key-odb-oracle.cpp  order_details_key-odb-pgsql.cpp  order_id-odb-oracle.cpp  order_id-odb-pgsql.cpp  orders-odb-oracle.cpp  orders-odb-pgsql.cpp  product_id-odb-oracle.cpp  product_id-odb-pgsql.cpp  products-odb-oracle.cpp  products-odb-pgsql.cpp  region-odb-oracle.cpp  region-odb-pgsql.cpp  region_id-odb-oracle.cpp  region_id-odb-pgsql.cpp  (+16 more)
projects/northwind/src/serialization/: categories_ser.cpp  customer_customer_demo_key_ser.cpp  employees_ser.cpp  order_details_key_ser.cpp  suppliers_ser.cpp
projects/northwind/src/test_data/: categories_td.cpp  customer_customer_demo_key_td.cpp  customers_td.cpp  employees_td.cpp  order_details_key_td.cpp  suppliers_td.cpp
projects/northwind/src/types/: categories.cpp  customer_customer_demo_key.cpp  employees.cpp  order_details_key.cpp  suppliers.cpp
(+12 files in other folders)
